<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_pb_dos"
    tools:context=".Main2Activity_Nivel2">

    <TextView
        android:id="@+id/tv_vidas"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/tv_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/et_vidas"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="9dp"
        android:text="@string/total_score"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="172dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/nombre_jugador"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="131dp"
        android:layout_toEndOf="@+id/tv_vidas"
        android:layout_toRightOf="@+id/tv_vidas"
        android:contentDescription="@string/desc"
        app:srcCompat="@mipmap/tres_vidas" />

    <ImageView
        android:id="@+id/iv_numerouno"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="206dp"
        android:contentDescription="@string/desc"
        app:srcCompat="@mipmap/cero" />

    <ImageView
        android:id="@+id/iv_simbolo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="215dp"
        android:layout_toEndOf="@+id/iv_numerouno"
        android:layout_toRightOf="@+id/iv_numerouno"
        android:contentDescription="@string/desc"
        app:srcCompat="@mipmap/mas" />

    <Button
        android:id="@+id/button"
        android:layout_width="136dp"
        android:layout_height="61dp"
        android:layout_below="@+id/et_respuesta"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:onClick="Comprobar"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/boton_sumar"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/et_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:background="@color/Respuesta"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_respuesta"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_numerodos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="208dp"
        android:layout_toEndOf="@+id/iv_simbolo"
        android:layout_toRightOf="@+id/iv_simbolo"
        android:contentDescription="@string/desc"
        app:srcCompat="@mipmap/cero" />

</RelativeLayout>