<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_pb3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_personaje"
        android:layout_width="336dp"
        android:layout_height="213dp"
        android:layout_above="@+id/et_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@mipmap/bulbasaur" />

    <Button
        android:id="@+id/btn_jugar"
        android:layout_width="201dp"
        android:layout_height="64dp"
        android:layout_above="@+id/tv_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:onClick="Jugar"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/jugar"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="326dp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_above="@+id/btn_jugar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="33dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pregunta"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="41dp"
        android:background="@mipmap/fondoet"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>